# buffy_bot

./: .gitignore  README.md  STATIC_SITE_USAGE.md  age_pdf.sh  conference.css  grad_bot_logger.py  landing_page.md  main.py  prompts.toml  pyproject.toml  static_site_generator.py  tech_explanation.md
conference_site/: index.html
conference_site/iterations/: Dancing_with_Death_Violence_Sexuality_and_the_Slay_iteration_4.html  Hyperreality_and_Baudrillard_in_Buffys_6x17_Normal_iteration_14.html  Hyperreality_and_Baudrillard_in_Buffys_6x17_Normal_iteration_15.html  Hyperreality_and_Baudrillard_in_Buffys_6x17_Normal_iteration_18.html  Hyperreality_and_Baudrillard_in_Buffys_6x17_Normal_iteration_19.html  Hyperreality_and_Baudrillard_in_Buffys_6x17_Normal_iteration_22.html  Hyperreality_and_Baudrillard_in_Buffys_6x17_Normal_iteration_25.html  Hyperreality_and_Baudrillard_in_Buffys_6x17_Normal_iteration_26.html  Hyperreality_and_Baudrillard_in_Buffys_6x17_Normal_iteration_3.html  Hyperreality_and_Baudrillard_in_Buffys_6x17_Normal_iteration_4.html  Hyperreality_and_Baudrillard_in_Buffys_6x17_Normal_iteration_6.html  Hyperreality_and_Baudrillard_in_Buffys_6x17_Normal_iteration_8.html  Hyperreality_and_Baudrillard_in_Buffys_6x17_Normal_iteration_9.html  Institutional_Critique_and_Patriarchal_Authority_i_iteration_1.html  Souls_Chips_and_Moral_Agency_Deconstructing_Essent_iteration_1.html  Souls_Chips_and_Moral_Agency_Deconstructing_Essent_iteration_11.html  Souls_Chips_and_Moral_Agency_Deconstructing_Essent_iteration_4.html  (+4 more)
docs/: CNAME  index.html  technical_documentation.html
(+52 files in other folders)
